<resources>
    <string name="app_name">TravelMark</string>
    <string name="need_permission">Please give access to your location</string>
    <string name="to_places">Go to places</string>
    <string name="name">Name of a place</string>
    <string name="description">Description</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="add">Add</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="empty">There is no places added</string>
</resources>